fixed text align issue

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -39,7 +39,6 @@ h6 {
 }
 
 p {
-  text-align: left;
   font-size: 16px;
   line-height: 1.5;
   margin-bottom: 20px;
